[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
authors = ["Alexander van Saase"]

[dependencies]
anyhow = "1.0.66"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
indoc = "1.0.7"
itertools = "0.10.5"
ndarray = "0.15.6"
parse-display = "0.6.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
